Fix to stretched out page view

--- a/frontend/app/src/assets/style/global.css
+++ b/frontend/app/src/assets/style/global.css
@@ -22,7 +22,7 @@ nav {
 }
 
 div #display-content {
-  height: 1200px;
+  height: 80%;
   width: 85%;
   background: #1c1b1b;
   text-align: center;
